2010-01-22  Jim Meyering  <jim@meyering.net>

	[BZ #11191]
	* posix/regexec.c (re_search_2_stub): Check for overflow
	when adding the sizes of the two strings.

	[BZ #11190]
	* posix/regexec.c (re_search_internal): Avoid overflow
	in computing re_malloc buffer size.

	[BZ #11189]
	* posix/regexec.c (prune_impossible_nodes): Avoid overflow
	in computing re_malloc buffer size.

	[BZ #11188]
	* posix/regexec.c (build_trtable): Avoid arithmetic overflow
	in size calculation.

	[BZ #11187]
	* posix/regexec.c (re_search_2_stub): Use simpler method than
	boolean for freeing internal storage.

2010-01-22  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex_internal.c (re_string_skip_chars): Simplify test for
	failed mbrtowc call.

2010-01-22  Jim Meyering  <jim@meyering.net>

	[BZ #11186]
	* posix/regex_internal.c (re_string_skip_chars): Don't assume WEOF
	fits in wchar_t.  Problem reported by Eric Blake.

	[BZ #11185]
	* posix/regex_internal.c (re_string_reconstruct): Remove declaration
	and stores into set-but-not-used local, "q".

	[BZ #11184]
	* posix/regex_internal.c (re_dfa_add_node): Extend the overflow
	detection test.  Patch by Paul Eggert.

	[BZ #11183]
	* posix/regex_internal.c (re_string_realloc_buffers):
	Detect and handle internal overflow.  Patch by Paul Eggert

2010-01-20  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/____longjmp_chk.c
	(CHECK_SP): Fix check for alternate stack.
	* sysdeps/unix/sysv/linux/s390/s390-64/____longjmp_chk.c
	(CHECK_SP): Likewise.

2010-01-19  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/memmove.S: Also check
	bit_Fast_Rep_String when SHARED isn't defined.

2010-01-19  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11194]
	* misc/bits/syslog.h (syslog, vsyslog): Remove unnecessary return.

2010-01-17  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/bits/libc-lock.h
	(__rtld_lock_recursive_t): New type.
	(__rtld_lock_initialize): New macro.
