@@ -1,5 +1,9 @@
 2010-01-22  Jim Meyering  <jim@meyering.net>
 
+	[BZ #11192]
+	* posix/regexec.c (re_copy_regs): Don't leak when allocation
+	of the start buffer succeeds but allocation of the "end" one fails.
+
 	[BZ #11191]
 	* posix/regexec.c (re_search_2_stub): Check for overflow
 	when adding the sizes of the two strings.
